# ember

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  ReadMe.md  build.c  build.h  build_clang.sh  ember  ember.c  math.h  run.sh
.cache/clangd/index/: array.c.44C561FB5461D60F.idx  array.h.CD8C9AEB25A3169F.idx  build.c.128C51724BA03906.idx  build.h.527AEF0183D3636A.idx  build.h.F6725FFD109CEFEB.idx  dependency_graph.c.74BC31C8DD01B00A.idx  dependency_graph.h.F5EA4E16DCF9DD04.idx  logger.h.327F3146F14FE74C.idx  main.c.B41BB8CA9EB31611.idx
core/: CMakeLists.txt  array.c  array.h  build.h  dependency_graph.c  dependency_graph.h  fs.c  fs.h  logger.h
test/: hello_fish.c  hello_world.c  hello_world.h
test/init_test/: depth_test.c
test_library/: hello_fish.h
