cmake_minimum_required(VERSION 3.16)
project(BuildSystem)
set(CMAKE_C_STANDARD 11)
set(CMAKE_C_COMPILER "clang")
add_subdirectory(core)
add_executable(${PROJECT_NAME} main.c)
target_link_libraries(${PROJECT_NAME} PRIVATE ${CMAKE_SOURCE_DIR}/third_party/clang/linux/libclang.so)
target_link_libraries(${PROJECT_NAME} PRIVATE core)
target_include_directories(${PROJECT_NAME} PRIVATE core)
target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_SOURCE_DIR}/third_party/clang-c)